Added Manychat api key option

--- a/admin/css/woocommerce-manychat-admin.css
+++ b/admin/css/woocommerce-manychat-admin.css
@@ -1,4 +1,8 @@
 /**
- * All of the CSS for your admin-specific functionality should be
- * included in this file.
- */
+* All of the CSS for your admin-specific functionality should be
+* included in this file.
+*/
+
+textarea, input[type="text"]{
+  width: 100%;
+}
